For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


1.6.5 - not released yet
========================
+ Add a hotkey to open the subtitles downloader dialog
+ Web server: various performance improvements
+ VobSub subtitles can now also be loaded by selecting or draging and dropping the .sub file
+ Ticket #439, External subtitles: support UTF8 without BOM
+ Ticket #1617, Use MPC-HC's icon when registering the context menu entries
+ Ticket #1673, FLAC Source: Basic support for embedded CUE sheet
+ Ticket #1680, Add Greek translation
+ Ticket #2425, Improve the remember file/DVD position feature: when a file/DVD that was already
  in the list is reopened, it now goes at the top the list. This way files/DVDs that are often
  used will stay in the list instead of being inexorably pushed out of it.
+ Ticket #2647, Add .3ga to known formats
+ Ticket #2712, MPC Video Decoder: Add the ability to force the interlaced flag
* Updated FFmpeg (n0.8-15849-g5cd567c)
* Updated MediaInfoLib to v0.7.61
* Updated ZenLib to v0.4.28 r411
* Updated Little CMS to v2.4 (git c606462)
* Updated SoundTouch to v1.7.0 r160
* Updated Basque, Czech, French, German, Russian, Simplified Chinese, Slovak
  and Ukrainian translations
! MpaDecFilter: updated CMixer, avoid possible memory leaks
! API: CMD_PAUSE was acting as CMD_PLAY and vice versa
! MPEG Splitter: Fix parsing of some malformed TS files
! VSFilter (auto-loading version) wasn't loading on Windows 7
! ISR/VSFilter: Fix high RAM usage with some complex subtitles
! Ticket #376, Fix subtitles when switching from animated subs to non-animated subs.
  The subtitles' timings were not correctly respected after switching from an
  animated subtitles track to a non-animated subtitles track.
! Ticket #1782, Correctly empty the "Recent" jump list when erasing the history
  and ensure that no item is added to Windows recent documents menu or to the