@@ -13,6 +13,7 @@ Legend:
 + Add a hotkey to open the subtitles downloader dialog
 + Web server: various performance improvements
 + VobSub subtitles can now also be loaded by selecting or draging and dropping the .sub file
++ FLAC Source: Basic support for embedded metadata
 + Ticket #439, External subtitles: support UTF8 without BOM
 + Ticket #1617, Use MPC-HC's icon when registering the context menu entries
 + Ticket #1673, FLAC Source: Basic support for embedded CUE sheet
@@ -29,6 +30,7 @@ Legend:
 * Updated SoundTouch to v1.7.0 r160
 * Updated Basque, Czech, French, German, Russian, Simplified Chinese, Slovak
   and Ukrainian translations
+* Ticket #2698, Allow the App key to be used as a hotkey which opens the player menu by default
 ! MpaDecFilter: updated CMixer, avoid possible memory leaks
 ! API: CMD_PAUSE was acting as CMD_PLAY and vice versa
 ! MPEG Splitter: Fix parsing of some malformed TS files
@@ -40,6 +42,7 @@ Legend:
 ! Ticket #1782, Correctly empty the "Recent" jump list when erasing the history
   and ensure that no item is added to Windows recent documents menu or to the
   "Recent" jump list when the history is disabled
+! Ticket #2326, Fix a crash when closing the player with the player menu open
 ! Ticket #2537, #2554, Fix "Attempted an unsupported operation" error in the
   Save dialogs on Vista and newer systems
 ! Ticket #2572, FLAC Source: Fix playback for some files
@@ -48,5 +51,3 @@ Legend:
 ! Ticket #2685, FLAC Source: Fix a crash with some corrupted file
 ! Ticket #2699, Avi Splitter: Fix a potential crash with PCM tracks
 ! Ticket #2703, Fix a crash that could happen when auto-loading some subtitles
-! Ticket #2326, Fix a crash when closing the player with the player menu open
-! Ticket #2698, Allow the App key to be used as a hotkey which opens the player menu by default
